Improve Exception handling on create newInstance of Class
* Using getDeclaredConstructor() on Class object